
2021-09-13  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: merged EXTFH changes from trunk (fbdb.c,fisam.c,fextfh.c)
	* fextfh.c: If record address changes, force rebuild of key info
	* fextfh.c (copy_fcd_to_file): only access key structure for INDEXED files
	* fextfh.c (fcd2_to_fcd3, fcd3_to_fcd2): extracted from (cob_sys_extfh)
	* fextfh.c: do FCD2<->FCD3 translation for both COBOL calls and C calls
	  to EXTFH
	* fextfh.c (copy_file_to_fcd, copy_fcd_to_file, copy_keys_fcd_to_file):
	  adjustments in conversion of internal/external file definition,
	  especially for incomplete FCD definitions
	* fileio.c: minor adjustments for io-module loading
	* common.h, fileio.c: definition and FCD2<->FCD3 translation for confFlags2
	  and lineCount (actual handling and tests open)

2021-09-12  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Some corrections for RELATIVE files and remove duplicated code

2021-09-07  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (save_status): only internally distinguish between
	  COB_EC_I_O_EOP and COB_EC_I_O_EOP_OVERFLOW for now as otherwise
	  recompilation of modules would be necessary (-> postponed)

2021-09-06  Simon Sobisch <simonsobisch@gnu.org>

	* exception.def, exception-io.def: update for COBOL 202x,
	  also adding some entries from COBOL 2014 and dropping one wrong
	* fileio.c: handling of COB_EC_I_O_RECORD_CONTENT,
	  distinguish between COB_EC_I_O_EOP and COB_EC_I_O_EOP_OVERFLOW
	* fileio.c (update_fcd_to_file): don't set error status at 0x

2021-09-05  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Add check for record address being available

2021-08-31  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c, common.h: implemented (cob_intr_bit_of),
	  (cob_intr_bit_to_char)

2021-08-30  Simon Sobisch <simonsobisch@gnu.org>

	* fextfh.c (copy_fcd_to_file): only access key structure for INDEXED files


2021-08-29  Ron Norman <rjn@inglenet.com>

	* fileio.c: Adjust record size up to minimum for the file